packages/grid/k8s/manifests/ingress-vpn-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grid-vpn-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /vpn
