packages/grid/k8s/manifests/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: public-loadbalancer
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app.kubernetes.io/component: proxy
  type: LoadBalancer
