packages/grid/k8s/manifests/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grid-stack-ingress-tls
  annotations:
    kubernetes.io/ingress.class: ""
spec:
  defaultBackend:
    service:
      name: proxy
      port:
        number: 80
  rules:
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ""
