packages/grid/k8s/manifests/ingress-vpn.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grid-vpn-ingressroute
spec:
  routes:
    - match: PathPrefix(`/vpn`)
      kind: Rule
      services:
        - name: headscale
          port: 8080
      middlewares:
        - name: grid-vpn-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grid-vpn-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /vpn
