packages/grid/k8s/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grid-stack-ingressroute
spec:
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 80
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: backend
          port: 80
    - match: PathPrefix(`/api/v1/syft/stream`)
      kind: Rule
      services:
        - name: backend-stream
          port: 80
